# MovieCache

./: .gitignore  CHANGELOG.md  README.md  catalog.schema.json  pyproject.toml  scanner.example.json
.github/workflows/: tests.yml
chrome-extension/: background.js  manifest.json  popup.css  popup.html  popup.js
deploy/: movie-inbox.service.example  nginx.movie-inbox.conf.example
docs/: deployment.md  storage.md
examples/: links.example.txt
scripts/: _package_bootstrap.py  build_viewer.py  catalog_deduplication.py  catalog_domain.py  catalog_export.py  catalog_external.py  catalog_http_security.py  catalog_matching.py  catalog_metadata.py  catalog_models.py  catalog_primitives.py  catalog_repository.py  catalog_schema.py  catalog_service.py  catalog_sources.py  catalog_titles.py  check.ps1  check.sh  enrich_catalog.py  match_external_links.py  migrate_catalog.py  scan_library.py  scan_video_catalog.sh  txt_to_catalog.py  view_catalog.py
src/movie_inbox/: __init__.py  __main__.py
src/movie_inbox/application/: catalog_service.py  external_service.py  repository.py
src/movie_inbox/cli/: database.py  enrich_catalog.py  import_catalog.py  main.py  match_external_links.py  migrate.py  scan_library.py
src/movie_inbox/domain/: catalog.py  deduplication.py  matching.py  metadata.py  models.py  normalization.py  titles.py
tests/: __init__.py  test_external_service.py  test_http_security.py  test_layering.py  test_matching.py  test_package_layout.py  test_schema_and_repository.py  test_server_cli.py  test_sqlite_repository.py  test_view_http.py
(+20 files in other folders)
